syntax = "proto3";

package proto.v1;

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc ListOrderProducts(ListOrderProductsRequest) returns (ListOrderProductsResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    int32 price = 3;
    string image_url = 4;
}

message CreateProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    string image_url = 5;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    string image_url = 5;
}

message ListProductsRequest {
    int32 page = 1;
    int32 per_page = 2;
}

message ListProductsResponse {
    repeated Product products = 1;

    message Product {
        string id = 1;
        string name = 2;
        string description = 3;
        int32 price = 4;
        string image_url = 5;
    }
}

message ListOrderProductsRequest {
    string order_id = 1;
}

message ListOrderProductsResponse {
    repeated Product products = 1;

    message Product {
        string id = 1;
        string name = 2;
        string description = 3;
        int32 price = 4;
        string image_url = 5;
        int32 quantity = 6;
    }
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    string image_url = 5;
}

message UpdateProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    string image_url = 5;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool deleted = 1;
}
